# xbox-swizzle

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: XboxSwizzleConfig.cmake.in
src/xbox-swizzle/: swizzle.c  swizzle.h
